# HardwareSim

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/core/: application.h
core/src/: application.cpp
platform/: CMakeLists.txt
platform/include/platform/: window.h
platform/src/: window.cpp
src/: main.cpp
